Create game logic

--- a/src/pages/Game/Game.sass
+++ b/src/pages/Game/Game.sass
@@ -5,7 +5,17 @@
     justify-content: space-between
     gap: 24px
 
+  &__time
+    &__value
+      display: inline-block
+      width: 80px
+
   &__char
     font-size: 160px
     text-align: center
     color: var(--color-secondary)
+
+  &__end
+    font-size: 64px
+    text-align: center
+    color: var(--color-tertiary)
