--- a/src/pages/Game/Game.sass
+++ b/src/pages/Game/Game.sass
@@ -19,3 +19,8 @@
     font-size: 64px
     text-align: center
     color: var(--color-tertiary)
+
+    span
+      display: block
+      font-size: 0.75em
+      color: var(--color-primary)
