Integrate getScores lambda into the frontend

--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -2,3 +2,6 @@
   --color-primary: #a29bfe
   --color-secondary: #74b9ff
   --color-tertiary: #e17055
+  --color-gold: #fdcb6e
+  --color-silver: #b2bec3
+  --color-bronze: #cd7f32
